Fixed several typos

--- a/latex/description.tex
+++ b/latex/description.tex
@@ -183,7 +183,7 @@ represent the worst-case severity of side channel leakage, none of them provides
 
 Another body of work related to this proposal are the cycle-accurate models/tools to simulate power and/or microarchitecture~\cite{Li:2009:MIP:1669112.1669172,Li:2011:CAM:2132325.2132479,509850,Ardestani:2013:EFM:2495252.2495480,Binkert:2011:GS:2024716.2024718,sesc,5982026,carlson2014aeohmcm}. While these models can accurately model the power consumption at each cycle, they are different from this work and hence may not be a proper tool for simulating analog side-channel signals for two main reasons: \textit{First}, while these methods do consider the activity factor to calculate power, they often treat all the bit-flips equally. However, as shown in \cite{Nader2020}, depending on the design, not all flips equally contribute to the overall signal. Ignoring this fact can lead to inaccurate modeling. \textit{Second}, depending on the architecture, different stages might have different effect on each other and the overall signal. Without properly modeling these effects, the overall signal can not be modeled.
 
-The relationship between executed instructions, microarhitecture, and the resulting side-channel signals is also explored by work on leveraging EM signals for program profiling, tracking, and analysis~\cite{7783762,Gorman:2017:AON:3123939.3123973,Elvan2021,Zop, Zop2,Moumita2018,Moumita2022}. Spectral Profiling methods~\cite{7783762,Zop,Zop2,Elvan2021} track program execution at loop \cite{7783762}, basic-block \cite{Zop,Zop2}, or individual-instruction~\cite{Elvan2021} granularity.
+The relationship between executed instructions, microarchitecture, and the resulting side-channel signals is also explored by work on leveraging EM signals for program profiling, tracking, and analysis~\cite{7783762,Gorman:2017:AON:3123939.3123973,Elvan2021,Zop, Zop2,Moumita2018,Moumita2022}. Spectral Profiling methods~\cite{7783762,Zop,Zop2,Elvan2021} track program execution at loop \cite{7783762}, basic-block \cite{Zop,Zop2}, or individual-instruction~\cite{Elvan2021} granularity.
 \textsc{EMProf}~\cite{Moumita2018} profiles cache misses and \textsc{Primer}~\cite{Moumita2022} profiles interrupts, both leveraging electromagnetic (EM) emanations from devices. By continuously analyzing these EM emanations, \textsc{EMProf} identifies where in the signal's timeline each period of stalling begins and ends, allowing it to identify LLC miss events and to measure the actual performance impact of each such event (or overlapping group of events). Because \textsc{EMProf} is completely external to the profiled system, it does not change the behavior of the profiled system in any way, and requires no hardware support, no memory or other resources, and no instrumentation on the profiled system. Similarly, \textsc{Primer} analyzes the device's external EM side-channel signal in real-time, without any interference with the device's program execution, while providing a detailed analysis of not only the overall overhead created by interrupts, but also their distribution over time (i.e., exact occurrence of interrupts in program execution time-line). All these methods are complementary to this proposal and combined with proposed modeling tool can enhance leakage estimation, compiler development, etc.
 
 \section{Proposed Research}
@@ -203,7 +203,7 @@ outreach and education activities, as well as the activities described in our Br
 
 \item We will continue to introduce relevant cross-disciplinary material into several courses at the graduate and undergraduate level.
 For example, we will add to VLSI and computer architecture courses an introduction to physical side-channel signals.
-Similarly, in electromagnetics, telecommunications, and signal processing classes, we will add a discussion of how computer
+Similarly, in electromagnetism, telecommunications, and signal processing classes, we will add a discussion of how computer
 hardware and software interact to create side-channel signals. This will help students understand the broader perspectives relevant to
 each class, and also help them appreciate the increasingly multi-disciplinary nature of science and technology.
 
