Electromagnetics is correct, also updated pdfs

--- a/latex/description.tex
+++ b/latex/description.tex
@@ -203,7 +203,7 @@ outreach and education activities, as well as the activities described in our Br
 
 \item We will continue to introduce relevant cross-disciplinary material into several courses at the graduate and undergraduate level.
 For example, we will add to VLSI and computer architecture courses an introduction to physical side-channel signals.
-Similarly, in electromagnetism, telecommunications, and signal processing classes, we will add a discussion of how computer
+Similarly, in electromagnetics, telecommunications, and signal processing classes, we will add a discussion of how computer
 hardware and software interact to create side-channel signals. This will help students understand the broader perspectives relevant to
 each class, and also help them appreciate the increasingly multi-disciplinary nature of science and technology.
 
